# elvis

./: CMakeLists.txt  package.xml
config/: elvis.yaml
csv/: winkel.csv  winkel_r.csv  winkeltabelle_verbessert.csv
include/elvis/: elvis_init.h
info/00_FINALE SITZUNG/: Roboter_V2.m  Roboter_V4.m  Roboter_V8.m  simulation.m  winkel_st_2.csv  winkel_st_3.csv  winkeltabelle_verbessert_1.csv  winkeltablle_ruckeln.csv
info/dynamixel_tutorials/config/: dynamixel_joint_controllers.yaml  dynamixel_joint_controllers_2.yaml
info/dynamixel_tutorials/launch/: controller_manager.launch  controller_spawner.launch
info/test_node/: CMakeLists.txt  CMakeLists_2.txt  manifest.xml  winkel1.csv  winkel3.csv
info/test_node/src/: example4.cpp  motor_movements_ext.cpp  motor_movements_ext_a.cpp  stand_up_01.cpp  stand_up_02.cpp
launch/: elvis.launch  elvis_aufstehen.launch  elvis_joint_state.launch
src/: elvis_init.cpp  elvis_main.cpp
stl/: t2_becken.blend  t2_becken.stl  t2_rumpf.blend  t2_rumpf_m.stl  t3_arm_ellenb_r.blend  t3_arm_ellenb_r_m.stl  t3_arm_ober_roll.blend  t3_arm_ober_roll_m.stl  t3_hals.blend  t3_hals_neu.stl  t3_joint_fusskontakt_l.blend  t3_joint_fusskontakt_l_m.stl  t3_joint_fusskontakt_r_neu.blend  t3_joint_fusskontakt_r_neu_m.stl  t3_kardan2.blend  t3_kardan2_m.stl  t3_kopf.blend  t3_kopf_m.stl  t3_oberschenkel_l.blend  t3_oberschenkel_l_m.stl  t3_oberschenkel_r.blend  t3_oberschenkel_r.stl  t3_unterarm.blend  t3_unterarm_m.stl  t3_unterschenkel_l.blend  t3_unterschenkel_l_m.stl  t3_unterschenkel_r.blend  t3_unterschenkel_r.stl  t3_unterschenkel_r_neu.blend  t3_unterschenkel_r_neu.stl  t4_kardan1.blend  t4_kardan1_m.stl
urdf/: elvis_aufstehen.rviz  elvis_aufstehen.urdf
